# halka

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/circle/: Cargo.toml
contracts/circle/src/: lib.rs  test.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/factory/test_snapshots/test/: test_admin_transfer_and_gating.1.json  test_create_circle_full_flow.1.json  test_double_initialize_fails.1.json  test_set_circle_wasm_leaves_existing_circles_alone.1.json  test_upgrade_preserves_the_circle_registry.1.json
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
docs/: deployments.md  users-and-feedback.md
scripts/: deploy-testnet.sh  deploy.sh
web/: .env.example  .gitignore  .npmrc  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/circle/: page.tsx
web/app/circles/: page.tsx
web/app/how-it-works/: page.tsx
web/components/: BalanceCard.tsx  CopyButton.tsx  Dashboard.tsx  FeedbackWidget.tsx  Footer.tsx  Header.tsx  HowItWorks.tsx  NetworkBanner.tsx  NetworkSwitcher.tsx  SendForm.tsx  ThemeToggle.tsx  WalletMenu.tsx  WalletProvider.tsx
web/components/circle/: CircleDashboard.tsx  (+3 more)
web/lib/: async.test.ts  async.ts  circle.test.ts  circle.ts  config.test.ts  config.ts  events.ts  factory.ts  format.test.ts  format.ts  reputation.ts  stellar.ts  units.test.ts  units.ts  useNetwork.ts  wallet.ts
(+40 files in other folders)
