[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "26"

[workspace.lints.clippy]
# A circle's terms are all fixed at construction and none are optional, so the
# initializer — and every typed client the macros generate from it — is wide by
# nature. Bundling them into a struct would only move the arguments elsewhere.
too_many_arguments = "allow"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
# lto is disabled: contracts depend on each other's crates for typed clients,
# and cross-crate LTO of cdylib contracts fails to load bitcode.
lto = false

# For more information about this profile see https://developers.stellar.org/docs/build/smart-contracts/example-contracts/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
